--- a/coverage_report.html
+++ b/coverage_report.html
@@ -94,7 +94,7 @@ table.table-condensed {
   font-size: 11px;
 }</style>
   <div class="col-md-8 col-md-offset-2">
-    <h2>yelpviz coverage - 85.48%</h2>
+    <h2>yelpviz coverage - 88.06%</h2>
     <div class="tabbable">
       <ul class="nav nav-tabs" data-tabsetid="covr">
         <li class="active">
@@ -106,8 +106,8 @@ table.table-condensed {
       </ul>
       <div class="tab-content" data-tabsetid="covr">
         <div class="tab-pane active" title="Files" data-value="Files" id="tab-covr-1">
-          <div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-9c88415827ed3b699695" style="width:100%;height:500px;"></div>
-          <script type="application/json" data-for="htmlwidget-9c88415827ed3b699695">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/get_all_businesses.R<\/a>","<a href=\"#\">R/analyze_cities.R<\/a>","<a href=\"#\">R/analyze_business_sectors.R<\/a>","<a href=\"#\">R/create_geo_heatmap.R<\/a>","<a href=\"#\">R/create_word_cloud.R<\/a>","<a href=\"#\">R/search_businesses.R<\/a>"],[32,206,204,116,47,33],[8,99,99,59,15,9],[0,81,83,56,15,9],[8,18,16,3,0,0],["0","131","131","1","4","2"],["0.00%","81.82%","83.84%","94.92%","100.00%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}","selection":{"mode":"multiple","selected":null,"target":"row","selectable":null}},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
+          <div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-697b263a58c1573b3d47" style="width:100%;height:500px;"></div>
+          <script type="application/json" data-for="htmlwidget-697b263a58c1573b3d47">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/analyze_cities.R<\/a>","<a href=\"#\">R/analyze_business_sectors.R<\/a>","<a href=\"#\">R/create_geo_heatmap.R<\/a>","<a href=\"#\">R/create_word_cloud.R<\/a>","<a href=\"#\">R/search_businesses.R<\/a>","<a href=\"#\">R/get_all_businesses.R<\/a>"],[206,204,116,47,33,32],[99,99,59,15,9,8],[81,83,56,15,9,8],[18,16,3,0,0,0],["131","131","1","4","4","2"],["81.82%","83.84%","94.92%","100.00%","100.00%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}","selection":{"mode":"multiple","selected":null,"target":"row","selectable":null}},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
         </div>
         <div class="tab-pane" title="Source" data-value="Source" id="tab-covr-2">
           <div id="files">
@@ -4270,14 +4270,14 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">18</td>
-                    <td class="coverage">2<em>x</em></td>
+                    <td class="coverage">5<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  url &lt;- 'https://api.yelp.com/v3/businesses/search'</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">19</td>
-                    <td class="coverage">2<em>x</em></td>
+                    <td class="coverage">5<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  headers &lt;- add_headers('Authorization' = sprintf('Bearer %s', api_key))</pre>
                     </td>
@@ -4291,7 +4291,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">21</td>
-                    <td class="coverage">2<em>x</em></td>
+                    <td class="coverage">5<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  params &lt;- list(location = location, term = paste(business_type, keyword), limit = limit, offset = offset)</pre>
                     </td>
@@ -4305,7 +4305,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">23</td>
-                    <td class="coverage">2<em>x</em></td>
+                    <td class="coverage">5<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  response &lt;- httr::GET(url, headers, query = params)</pre>
                     </td>
@@ -4319,21 +4319,21 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">25</td>
-                    <td class="coverage">2<em>x</em></td>
+                    <td class="coverage">5<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  if (httr::status_code(response) == 200) {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">26</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    content &lt;- httr::content(response, type = "text", encoding = "UTF-8")</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">27</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    return(fromJSON(content)$businesses)</pre>
                     </td>
@@ -4354,14 +4354,14 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">30</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    print(paste('Error:', httr::status_code(response)))</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">31</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    return(NULL)</pre>
                     </td>
@@ -4491,9 +4491,9 @@ table.table-condensed {
                       <pre class="language-r">get_all_businesses &lt;- function(api_key, location, business_type, keyword, total = 1000) {</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">16</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  results &lt;- list()</pre>
                     </td>
@@ -4505,9 +4505,9 @@ table.table-condensed {
                       <pre class="language-r">  # Loop through search results in increments of 50 (API limit) until reaching 'total' count</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">18</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  for (offset in seq(0, total, by = 50)) {</pre>
                     </td>
@@ -4519,9 +4519,9 @@ table.table-condensed {
                       <pre class="language-r">    # Call the search function with current offset</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">20</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    partial_results &lt;- search_businesses(api_key, location, business_type, keyword, offset, 50)</pre>
                     </td>
@@ -4533,16 +4533,16 @@ table.table-condensed {
                       <pre class="language-r">    # Check if results were returned and add to the cumulative results list</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">22</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    if (!is.null(partial_results) &amp;&amp; length(partial_results) &gt; 0) {</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">23</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">      results &lt;- c(results, list(partial_results))</pre>
                     </td>
@@ -4561,9 +4561,9 @@ table.table-condensed {
                       <pre class="language-r">      # Exit loop if no more results are found</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">26</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">1<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">      break</pre>
                     </td>
@@ -4589,16 +4589,16 @@ table.table-condensed {
                       <pre class="language-r">  # Combine all partial results into a single dataframe</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">30</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  all_businesses_df &lt;- bind_rows(results)</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">31</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  return(all_businesses_df)</pre>
                     </td>
